# nose

./: .coderabbit.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  design.md  dist-workspace.toml  test_overlap_bug
crates/nose-cli/: Cargo.toml
crates/nose-cli/src/: baseline.rs  baseline_comparison.rs  baseline_view.rs  cache.rs  capabilities.rs  cli_args.rs  command_dispatch.rs  config.rs  detect_command.rs  detect_pipeline.rs  diagnostic_commands.rs  divergence.rs  falsify.rs  family_display.rs  fnv.rs  ignores.rs  il_command.rs  legacy_prelude.rs  lib.rs  main.rs  main_tests.rs  markdown.rs  oracle_gate.rs  path_utils.rs  query_baseline_gate.rs  query_commands.rs  query_dashboard.rs  query_dataset.rs  query_family_text.rs  query_markdown.rs  query_model.rs  query_open.rs  query_opportunities.rs  query_options.rs  query_sarif.rs  query_semantic_packs.rs  query_terms.rs  query_views.rs  query_witness.rs  recall_loss_report.rs  (+23 more)
crates/nose-cli/src/divergence/: detect.rs  git.rs  output.rs  tests.rs
crates/nose-cli/src/main_tests/: declarations.rs  query_family.rs  surface_hints.rs
crates/nose-cli/src/recall_loss_report/: model.rs  obligations.rs
crates/nose-cli/src/review/: detect.rs  git.rs  output.rs  tests.rs
crates/nose-cli/src/semantic_pack/: adoption_gates.rs  compatibility.rs  inventory.rs
crates/nose-cli/src/verify_admission/: callee_identity.rs  hof.rs  runtime_boundary.rs
crates/nose-cli/tests/: cli.rs  css_html_quality.rs  detection.rs  equivalence.rs  robustness.rs
crates/nose-cli/tests/cli/: commands.rs  exact_fragments.rs  modes.rs  output_contract.rs  query_base.rs  review.rs  semantic_boundaries.rs  semantic_core.rs  semantic_idioms.rs  support.rs
crates/nose-cli/tests/equivalence/: algebra_laws.rs  async_scheduling_hard_negatives.rs  branch_selection.rs  call_binding_boundaries.rs  collection_builders.rs  collection_membership.rs  collection_streams.rs  convergence_probes.rs  csharp_linq_transparent.rs  csharp_surfaces.rs  css_surfaces.rs  imported_collection_membership.rs  imported_js_ts_collection_membership.rs  imported_js_ts_map_defaults.rs  inline_and_anchors.rs  iteration_contracts.rs  language_operator_boundaries.rs  language_surfaces.rs  literal_map_defaults.rs  literal_value_boundaries.rs  loops_and_reductions.rs  map_default_boundaries.rs  map_key_membership.rs  markup_surfaces.rs  numeric_law_boundaries.rs  numeric_scalars.rs  operator_boundaries.rs  option_boundaries.rs  promise_aggregates.rs  promise_cancellation.rs  promise_executors.rs  promise_finally.rs  promise_liveness.rs  protocol_boundaries.rs  receiver_membership.rs  recursion_iteration.rs  reinvented_helper_boundaries.rs  semantic_law_boundaries.rs  source_identity_boundaries.rs  syntax_surfaces.rs  (+3 more)
crates/nose-cli/tests/fixtures/: scan-json-v1.json
crates/nose-detect/: Cargo.toml
crates/nose-detect/src/: abstraction.rs  align.rs  candidates.rs  contiguous.rs  detectors.rs  fragment.rs  il_utils.rs  lib.rs  locations.rs  lsh.rs  model.rs  options.rs  orchestration.rs  reinvented.rs  report.rs  strict_exact.rs  units.rs  witness.rs
crates/nose-detect/src/fragment/: conditional_guard.rs  contract.rs  loop_effect.rs  oracle.rs  recognize.rs  self_field_body.rs
crates/nose-detect/src/report/: model.rs  paths.rs  ranking.rs  score.rs  tests.rs
crates/nose-detect/src/strict_exact/: calls.rs  collections.rs  factories.rs  facts.rs  hof.rs  identity.rs  primitives.rs  static_index.rs  tests.rs  tree.rs
crates/nose-detect/src/units/: features.rs  fragments.rs  model.rs  test_paths.rs  tests.rs  timing.rs  tree.rs
crates/nose-detect/src/witness/: analysis.rs  anti_unify.rs  dag.rs  model.rs  tests.rs
crates/nose-frontend/: Cargo.toml
crates/nose-frontend/src/: c.rs  corpus_tests.rs  coverage.rs  csharp.rs  css.rs  declaration_facts.rs  embedded.rs  go.rs  html.rs  java.rs  js_ts.rs  lib.rs  lower.rs  module_imports.rs  python.rs  ruby.rs  rust.rs  source_artifacts.rs  swift.rs  swift_cross_file_shadows.rs  type_domain_aliases.rs
crates/nose-frontend/src/c/: expressions.rs  includes.rs  items.rs  statements.rs  tests.rs
crates/nose-frontend/src/csharp/: control.rs  expressions.rs  items.rs  linq.rs  objects.rs  patterns.rs  tests.rs
crates/nose-frontend/src/go/: assignments.rs  control.rs  expressions.rs  functions.rs  statements.rs  tests.rs
crates/nose-frontend/src/java/: constructors.rs  control.rs  expressions.rs  items.rs  tests.rs
crates/nose-frontend/src/js_ts/: control.rs  declarations.rs  expressions.rs  globals.rs  imports.rs  jsx.rs  operators.rs  record_guard.rs  syntax.rs  tests.rs  types.rs
crates/nose-frontend/src/lower/: builder.rs  control_flow.rs  core_semantic_evidence.rs  evidence.rs  expr_helpers.rs  file.rs  imports.rs  library_api_evidence.rs  library_api_post_lower.rs  parse.rs  post_lower_evidence.rs  symbol_evidence.rs  tests.rs
crates/nose-frontend/src/module_imports/: bindings.rs  diagnostics.rs  exports.rs  modules.rs  namespace_members.rs  snapshot.rs  tests.rs
crates/nose-frontend/src/python/: comprehensions.rs  control.rs  expressions.rs  functions.rs  statements.rs  tests.rs
crates/nose-frontend/src/ruby/: blocks_calls.rs  control.rs  expressions.rs  statements.rs  tests.rs
crates/nose-frontend/src/rust/: expressions.rs  functions.rs  items.rs  macros.rs  tests.rs  (+2 more)
crates/nose-markdown/: Cargo.toml
crates/nose-markdown/examples/: mddup.rs
crates/nose-markdown/src/: detect.rs  eval.rs  fingerprint.rs  lib.rs  norm.rs  synth.rs  unit.rs  verify.rs  witness.rs
crates/nose-semantics/: Cargo.toml
crates/nose-semantics/src/: api_guards.rs  async_adapters.rs  collection_semantics.rs  constructor_contracts.rs  demand.rs  effects.rs  evidence.rs  free_builtins.rs  guard_evidence.rs  import_facts.rs  language_profile.rs  lib.rs  library_api.rs  map_statics.rs  method_contracts.rs  method_families.rs  module_exports.rs  module_semantics.rs  object_key_views.rs  operator_thresholds.rs  operators.rs  packs.rs  sequence_surface.rs  stdlib_semantics.rs  symbol_identity.rs  tests.rs  type_domain.rs
(+1239 files in other folders)
