[workspace]
resolver = "2"
members = [
    "crates/nose-il",
    "crates/nose-semantics",
    "crates/nose-frontend",
    "crates/nose-normalize",
    "crates/nose-detect",
    "crates/nose-eval",
    "crates/nose-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/corca-ai/nose"
repository = "https://github.com/corca-ai/nose"
# Minimum Supported Rust Version — verified by a dedicated CI job. Bump only
# deliberately (it is a breaking change for downstream); the dev/CI toolchain is
# pinned separately in rust-toolchain.toml. Floor is set by the dependency tree
# (clap's `clap_lex` needs edition2024 ⇒ Rust 1.85), not by our own code.
rust-version = "1.85"

[workspace.dependencies]
# Internal crates carry an explicit `version` (not just `path`) so the tree has no
# wildcard deps and the crates stay publishable; `path` wins for local builds.
nose-il = { path = "crates/nose-il", version = "0.5.0" }
nose-semantics = { path = "crates/nose-semantics", version = "0.5.0" }
nose-frontend = { path = "crates/nose-frontend", version = "0.5.0" }
nose-normalize = { path = "crates/nose-normalize", version = "0.5.0" }
nose-detect = { path = "crates/nose-detect", version = "0.5.0" }
nose-eval = { path = "crates/nose-eval", version = "0.5.0" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
lasso = { version = "0.7", features = ["multi-threaded", "serialize"] }
rayon = "1"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
toml = "0.8"

# Centralized lint policy — every crate opts in with `[lints] workspace = true`,
# so the quality bar is defined once and enforced uniformly. CI runs clippy with
# `-D warnings`, so anything set to `warn` below is a hard gate there.
[workspace.lints.rust]
# `rust_2018_idioms` is a lint *group*; give it lower priority so the specific
# lints below (and any per-crate overrides) win over it.
rust_2018_idioms = { level = "warn", priority = -1 }
# …but the lowered-lifetime style (`&mut Lowering`, `TsNode`) is intentional here,
# so opt out of the one noisy member of that group.
elided_lifetimes_in_paths = "allow"
unsafe_code = "forbid"            # nose is pure safe Rust; keep it that way
unreachable_pub = "warn"          # flag over-exposed `pub` (prefer pub(crate)) — export hygiene
unused_qualifications = "warn"

[workspace.lints.clippy]
dbg_macro = "warn"                # no stray `dbg!` in committed code
todo = "warn"                     # no `todo!()` left in shipped paths
uninlined_format_args = "warn"    # prefer `format!("{x}")` to `format!("{}", x)`
# Complexity / readability ratchets. Tunable thresholds live in `clippy.toml`
# and start lenient so today's code passes; tighten them over time (see that
# file). These are `warn` here, which CI's `clippy -D warnings` promotes to a
# hard gate.
cognitive_complexity = "warn"     # cap per-function branching complexity (tunable)
# Exhaustiveness: a `_ =>` arm that only stands in for a single remaining enum
# variant silently swallows the next variant added. Spell it out instead.
# (The blunter `wildcard_enum_match_arm` is intentionally NOT used — the IL-kind
# dispatch matches legitimately fold dozens of variants into `_`.)
match_wildcard_for_single_variants = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
