[package]
name = "nose-detect"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nose-il = { workspace = true }
nose-semantics = { workspace = true }
nose-normalize = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
nose-frontend = { workspace = true }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "pipeline"
harness = false

[lints]
workspace = true
