[package]
name = "nose-frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nose-il = { workspace = true }
nose-semantics = { workspace = true }
rustc-hash = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

# Core 0.25 accepts grammar ABI 14 AND 15, so the ABI-15 grammars below (python/
# javascript 0.25, c 0.24, go 0.25, rust 0.24) load alongside the ABI-14 grammars
# still pinned at 0.23 (java/ruby/typescript — no newer upstream line exists).
# NOTE: go 0.25 wraps block / switch-case / select-case statements in a new
# `statement_list` node; go.rs flattens that wrapper (see `stmt_children`) so the
# lowering is byte-identical to go 0.23 — required, else the go Raw ratio explodes.
# See #403. VALIDATE any bump on a `cargo clean` release build — incremental builds
# reuse stale cc-compiled grammar objects and pass falsely (#399/#400/#401 → #402).
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-swift = "0.7.3"
# C# grammar (crates.io, MIT; ABI accepted by core 0.25 — verified by the 0.23.5
# line's `tree-sitter 0.25` dev-dep). C# is lowered as a statically-typed C-family
# imperative language, like Java (see csharp.rs). VALIDATE any bump on a
# `cargo clean` release build — incremental builds reuse stale grammar objects (#403).
tree-sitter-c-sharp = "0.23"
# CSS grammar (ABI-15, matches core 0.25). CSS rules are lowered to a DECLARATIVE
# IL and matched by computed-style equivalence (its own canonicalization + oracle),
# not the imperative value graph. See css.rs. VALIDATE on a `cargo clean` release
# build like every other grammar (#403).
tree-sitter-css = "0.25"
# HTML grammar (ABI-14, accepted by core 0.25). HTML markup is lowered to a
# DECLARATIVE element tree and matched by rendered-DOM equivalence; <script>/<style>
# internals are analyzed separately as JS/CSS regions (see embedded.rs / html.rs).
tree-sitter-html = "0.23"

[lints]
workspace = true
